Internship/Internship/src/objects/Homework__c.object
<CustomObject>
    <fields>
        <fullName>DeadLine__c</fullName>
        <label>DeadLine</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Homeworks</relationshipLabel>
        <relationshipName>Homeworks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lecturer_Name__c</fullName>
        <label>Lecturer`s name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lecturer_email__c</fullName>
        <label>Lecturer`s email</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lecturer_other_contacts__c</fullName>
        <label>Lecturer`s other contacts</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lecturer_skype_id__c</fullName>
        <label>Lecturer`s skype id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Topics__c</fullName>
        <label>Topics</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Homework</label>
    <nameField>
        <label>Homework Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Homeworks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>